# aes_side_attack

./: Demo_AVR_over_serial.ipynb  README.md  aes.py  test_device.py
attack/: attaque_avec_tensorflow.ipynb  side_attack.py
attack/tensorflow/: build_lib  left_shift.cc  right_shift.cc
avr_code/: CMakeLists.txt
avr_code/src/: lcd.c  lcd.h  main.c  usart.h
driver/: tektronik_dpo_2002b_scope.py
